--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,77 @@
-.App {
-  text-align: center;
-}
+/* .App {
+  position: relative;
+} */
 
 .App-logo {
   height: 40vmin;
   pointer-events: none;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+/* General Component */
+
+.button{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background: #BE123C;
+  border-radius: 6px;
+  color: #FFF;
+  text-transform: uppercase;
+  font-weight: 700;
+  padding: 10px 15px;
+  gap: 0.4rem;
+  cursor: pointer;
+  border: 0;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.loading{
+  position: relative;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  width: 100vw;
+  height: 100vh;
+  text-align: center;
+  color: #FFF;
+  background: url('./Assets/ban.jpg');
+  background-size: cover;
+  background-position: bottom;
+  z-index: 1;
+}
+.loading::after{
+  content: '';
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  opacity: 1;
+  background-color: #04020236;
+  z-index: 100;
 }
 
-.App-link {
-  color: #61dafb;
+.loading > h1 {
+  font: 0.5em 'Roboto', sans-serif;
+  margin-bottom: 1rem;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+#loading {
+  margin-top: 1rem;
+  display: inline-block;
+  width: 50px;
+  height: 50px;
+  border: 3px solid rgba(255,255,255,.3);
+  border-radius: 50%;
+  border-top-color: #fff;
+  animation: spin 1s ease-in-out infinite;
+  -webkit-animation: spin 1s ease-in-out infinite;
+}
+
+
+@keyframes spin {
+  to { -webkit-transform: rotate(360deg); }
+}
+@-webkit-keyframes spin {
+  to { -webkit-transform: rotate(360deg); }
 }
